# fhp_kl_roman_pipe

./: .gitignore  .pre-commit-config.yaml  README.md  conda-lock.yml  environment.yaml  install.sh  makefile  pyproject.toml
.github/workflows/: format-checker.yml  pr_checks.yml
docs/tutorials/: README.md  quickstart.md  sampling.md  tng50_data.md
experiments/: README.md
kl_pipe/: diagnostics.py  intensity.py  likelihood.py  model.py  noise.py  parameters.py  plotting.py  priors.py  psf.py  synthetic.py  transformation.py  utils.py
kl_pipe/diagnostics/: __init__.py  datacube.py  grism.py
kl_pipe/sampling/: README.md  __init__.py  base.py  blackjax.py  configs.py  diagnostics.py  emcee.py  factory.py  nautilus.py  numpyro.py  task.py  ultranest.py
kl_pipe/tng/: README.md  __init__.py  data_vectors.py  loaders.py
scripts/: collate_diagnostics.py  download_cyverse_data.sh  visualize_tng_3d.py
tests/: README.md  conftest.py  test_blackjax.py  test_grism_core.py  test_intensity.py  test_jax.py  test_likelihood_slices.py  test_noise.py  test_numpyro.py  test_optimizer_recovery.py  test_priors.py  test_psf.py  test_psf_tng.py  test_sampling.py  test_sampling_diagnostics.py  test_tng_data_vectors.py  test_tng_likelihood.py  test_tng_loaders.py  test_tng_sampling_diagnostics.py  test_utils.py  test_velocity.py
