[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kl_pipe"
version = "0.1.0"
description = "Test repo for a roman KL pipeline"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Spencer Everett", email = "severett@caltech.edu" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/KinematicLensing/kl_roman_pipe/"
Repository = "https://github.com/KinematicLensing/kl_roman_pipe/"

[tool.setuptools]
packages = ["kl_pipe"]

[tool.pytest.ini_options]
markers = [
    "tng50: tests that require TNG50 mock data from CyVerse",
    "tng_diagnostics: TNG diagnostic plotting tests (slow, large output files)",
    "slow: tests that take significant time to run",
]
filterwarnings = [
    # Ignore ArviZ FutureWarning about upcoming refactor
    "ignore:.*ArviZ is undergoing a major refactor.*:FutureWarning",
]
